--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin:0;
   padding:0;
   box-sizing: border-box;
@@ -15,5 +15,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#root{
+  padding: 0;
+}
+
+code{
+color:cyan
 }
 
