--- a/src/pages/Layout.css
+++ b/src/pages/Layout.css
@@ -1,6 +1,5 @@
 .nav {
     width: 100vw;
-    padding: 30px;
     background-color: rgb(26, 31, 39);
     box-shadow: 0 0 15px black;
 }
@@ -9,27 +8,25 @@
     list-style: none;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     margin: 0 auto;
 }
 
-.navUl li:not(:last-child) {
-    padding: 10px;
-    margin-right: 20px;
-}
-
 .link {
-    padding: 10px 20px;
-    border-radius: 10px;
-    border: none;
+    display: block;
+    padding: 40px;
+    width: 100%;
+    height: 100%;
     font-size: 25px;
     transition: 0.2s;
     text-decoration: none;
     color: rgb(151, 174, 209);
 }
-.link:hover {
+
+li:hover {
     background-color: rgb(40, 52, 70);
 }
+
 .link:active {
     background-color: rgb(34, 42, 54);
     box-shadow: inset 1px 1px 4px black;
@@ -39,14 +36,15 @@
     .navUl {
         flex-direction: column;
         justify-content: center;
-    }
-
-    .navUl li:not(:last-child) {
-        padding: 0;
-        margin-right: 0;
+        padding: 20px 0;
     }
 
     .navUl li {
-        margin: 20px 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    .link {
+        padding: 20px 0;
     }
 }
